--- a/css/style.css
+++ b/css/style.css
@@ -3,29 +3,34 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: RGB(190, 173, 144);
+    background-color: white;
+    max-height: 400px;
   }
 
   h1 {
     font-size: 55px;
     font-family: 'Permanent Marker', cursive;  
+    margin: 20px;
+    flex-wrap: wrap;
   }
 
   main {
     flex-grow: 1;
     flex-basis: 0;
-    color: RGB(166, 47, 49);
+    color: white;
+    max-height: 400px;
   }
 
   footer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-end;
     color: RGB(166, 47, 49);
+    font-family: sans-serif;
     
   }
 
-  header, footer {
+  header, footer, main {
     font-size: 12px;
   }
 
@@ -42,7 +47,7 @@ body {
   }
 
   .middler > h1 > a:hover {
-    color: white;
+    color: gray;
   }
 
   .image-middler {
@@ -54,21 +59,33 @@ body {
   }
 
   .image-middler > img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 
-  .image-middler > img{
-    border: 3px black solid;
-    box-shadow: 0 0 10px white;
-    max-width: 450px;
+  .image-middler > img {
+    border: 3px RGB(166, 47, 49) solid;
+    box-shadow: 0 0 5px black;
+    min-width: 20%;
+    max-width: 35%;
     height: auto;
+  }
+
+  .bottom-middler {
+    color: RGB(166, 47, 49);
+    font-family: sans-serif;
+    font-size: 13.5px;
+    margin: 25px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   .navlinks {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    background-color: khaki;
+    background-color: RGB(166, 47, 49);
   
     display: flex;
     flex-direction: row;
@@ -76,7 +93,7 @@ body {
   }
   
   .navlink > a {
-    color: black;
+    color: white;
     padding: 10px;
     display: inline-block;
     font-family: sans-serif;
@@ -88,5 +105,15 @@ body {
     background-color: gray;
   }
 
+  @media (max-width: 400px) {
+    .middler > h1 {
+      font-size: 22px !important;
+    }
+
+    .navlink > a {
+      font-size: 1.0em;
+    }
+  }
+  
   
   
