--- a/css/gallery.css
+++ b/css/gallery.css
@@ -10,9 +10,24 @@ h2 {
     padding-bottom: 100px;
 }
 
+h3 {
+    margin-left: 500px;
+    margin-top: -100px;
+    padding-bottom: 100px;
+}
+
+h3 > a {
+    text-decoration: none;
+    color:RGB(166, 47, 49);
+}
+
+h3 > a:hover {
+    color: seagreen;
+}
+
 #contact-info {
     margin-left: 500px;
-    margin-top: -300px;
+    margin-top: -400px;
     margin-right: 100px;
     padding-bottom: 100px;
 }
@@ -50,4 +65,16 @@ h1 {
 
   h2 {
     color: black;
+  }
+
+  @media (max-width: 450px) {
+      h2 {
+          font-size: 15px;
+      }
+    h3 {
+        margin-left: 200px;
+        margin-top: 5px;
+        padding-bottom: 50px;
+        font-size: 10px;
+    }
   }
