--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,11 @@ body {
       margin: 10px;
       padding: 10px;
     }
+
+    .middler > .image-middler > #contact-info {
+      margin: 10px;
+      padding: 10px;
+    }
   }
   
   
